--- a/.github/workflows/bricktools-check.yaml
+++ b/.github/workflows/bricktools-check.yaml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   bricktools-check:
     runs-on: ubuntu-latest
+    container: insilica/biobricks:1.0
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
