manual gh action

--- a/.github/workflows/bricktools-check.yaml
+++ b/.github/workflows/bricktools-check.yaml
@@ -7,5 +7,19 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: bricktools check
-        uses: biobricks-ai/github-actions/bricktools-check@v0.0.3
+      # - name: bricktools check
+      #   uses: biobricks-ai/github-actions/bricktools-check@v0.0.3
+    - name: Check out repository code
+      uses: actions/checkout@v3
+
+    - name: install devtools
+      run: install.packages("devtools")
+      shell: Rscript {0}
+
+    - name: install bricktools
+      run: devtools::install_github("biobricks-ai/bricktools")
+      shell: Rscript {0}
+
+    - name: bricktools check
+      run: bricktools::check(".")
+      shell: Rscript {0}
