--- a/.github/workflows/bricktools-check.yaml
+++ b/.github/workflows/bricktools-check.yaml
@@ -7,11 +7,9 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: bricktools check
-        uses: biobricks-ai/github-actions/bricktools-check@v0.0.4
-    # - name: Check out repository code
-    #   uses: actions/checkout@v3
+    - name: Check out repository code
+      uses: actions/checkout@v3
 
-    # - name: bricktools check
-    #   run: bricktools::check(".")
-    #   shell: Rscript {0}
+    - name: bricktools check
+      run: kjadfoij
+      shell: Rscript {0}
