--- a/.github/workflows/bricktools-check.yaml
+++ b/.github/workflows/bricktools-check.yaml
@@ -11,5 +11,5 @@ jobs:
       uses: actions/checkout@v3
 
     - name: bricktools check
-      run: kjadfoij
+      run: bricktools::check(".")
       shell: Rscript {0}
