use biobricks:latest

--- a/.github/workflows/bricktools-check.yaml
+++ b/.github/workflows/bricktools-check.yaml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   bricktools-check:
     runs-on: ubuntu-latest
-    container: insilica/biobricks:2.0
+    container: insilica/biobricks:latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
