iterating on docker action

--- a/.github/workflows/bricktools-check.yaml
+++ b/.github/workflows/bricktools-check.yaml
@@ -7,4 +7,4 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: bricktools check
-        uses: biobricks-ai/github-actions/bricktools-check@v0.0.5
+        uses: biobricks-ai/github-actions/bricktools-check@main
